change image source

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table cellspacing="20">
   <tr>
   <td>
-  <img src="flora_farms-modified.jpg"
+  <img src="images/flora_farms-modified.jpg"
        alt="Matthew and Emily at Flora Farms in Cabo"></td>
   <td><h1>Matthew Storm Radentz</h1>
     <p><em>I am a <a href="https://www.jupiter.fl.us/">Jupiter Fl</a>z resident, I am learning looking to start a new career in programming. I love all things water (oceans, rivers, lakes, etc.) and water sports</em></p>
